--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -20,6 +20,9 @@
 </div>
 
 <div class="container">
+  <div class="alert alert-warning">
+    <%= flash.map {|name, message| "#{name}: #{message}"}.join("; ") %>
+  </div>
 
   <div class="starter-template">
     <h1>Bootstrap starter template</h1>
