--- a/app/views/url/index.html.erb
+++ b/app/views/url/index.html.erb
@@ -1,7 +1,7 @@
 <h1>URL Shortener</h1>
 <div id="link">
   <form action="/url" method="POST">
-    <input id="url" type="text"></input>
+    <input id="url" name="original" type="text"></input>
     <input type="submit" value="Submit" />
   </form>
 </div>
