Add new capybara for entering public URL

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -7,6 +7,11 @@
     <p>Hi, there!</p>
 
     <%= DateTime.now %>
+
+    <form id="link" action="/url" method="post">
+      <input type="text" name="url" />
+      <input type="submit" value="Submit" />
+    </form>
   </div>
 
 </div>
