Add show page after submitting url

--- a/app/views/url/show.html.erb
+++ b/app/views/url/show.html.erb
@@ -1,1 +1,6 @@
-<h1>Success</h1>
+<h1>Converted</h1>
+
+<div class="result">
+  <div class="url">Original: <span><%= @url.original %></span></div>
+  <div class="url">Converted: <span><%= @url.converted %></span></div>
+</div>
