--- a/app/views/url/index.html.erb
+++ b/app/views/url/index.html.erb
@@ -1,7 +1,14 @@
-<h1>URL Shortener</h1>
-<div id="link">
-  <form action="/url" method="POST">
-    <input id="url" name="original" type="text"></input>
-    <input type="submit" value="Submit" />
-  </form>
-</div>
+<h1>URL List</h1>
+
+<table width="500" border="1">
+  <tr>
+    <th>Original</th>
+    <th>Converted</th>
+  </tr>
+<% @urls.each do |t| %>
+  <tr>
+    <td><%= t.original %></td>
+    <td><%= t.converted %></td>
+  </tr>
+<% end %>
+</table>
